test/fail/def-assert-pattern.grace
def name : type { no } = object {}
